--- a/02-javascript/09-module/esm/esm-browser.html
+++ b/02-javascript/09-module/esm/esm-browser.html
@@ -5,6 +5,10 @@
     <title>ES Module Test</title>
   </head>
   <body>
+
+    <!-- p111 -->
+    <!-- もうすこしで半分😭がんばれっ🐢 -->
+
     <ul id="list"></ul>
     <script type="module">
 import uniq from 'https://dev.jspm.io/lodash-es/uniq.js';
